<resources>
    <string name="app_name">PropertyValuePredictor</string>
    <string name="title">Property Value Predictor</string>
    <string name="AreaTitle">Area (m²)</string>
    <string name="hint_area">eg., 2000</string>
    <string name="NumroomTitle">Number of rooms</string>
    <string name="hint_room">eg., 3</string>
    <string name="Housetype">Please select house type</string>
    <string name="dropdown">Property Type</string>
    <string name="calculate">Predict Price</string>
    <string name="predicted_price_placeholder">Estimated price is %1$s</string>
</resources>